# onedrive

./: .gitignore  .travis-ci.sh  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile-stretch  FAQ.md  INSTALL.md  Makefile  Makefile.am  Makefile.in  Makefile.win  README.BusinessSharedFolders.md  README.Office365.md  README.docker.md  README.md  README.odrive.md  aclocal.m4  changelog.md  config  configure  configure.ac  entrypoint.sh  generate_version  meson.build  meson_options.txt  onedrive.1.in  onedrive.1.in.in  onedrive.conf  onedrive.service  onedrive.service.in  readme.md  run_test.sh  spellcheck.txt
.github/: FUNDING.yml  lock.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/ISSUE_TEMPLATE/workflows/: lock.yml
.github/actions/spelling/: allow.txt  excludes.txt  only.txt  patterns.txt
.github/gdb/: smoke-monitor.gdb
.github/workflows/: docker.yaml  e2e-business-shared-folders.yaml  e2e-business.yaml  e2e-master-status.yaml  e2e-personal-15char-check.yaml  e2e-personal-shared-folders.yaml  e2e-personal.yaml  e2e-sharepoint.yaml  lock.yml  macos-testbuild.yaml  smoke-test.yaml  spellcheck.yaml  testbuild.yaml
ci/e2e/: README-rerun.md  evaluate_rerun_gate.py  rerun_failures.py  run.py  run.sh  run_business_shared_folders.py  run_personal_shared_folders.py
ci/e2e/framework/: __init__.py  base.py  context.py  database_capture.py  manifest.py  result.py  utils.py
ci/e2e/testcases/: __init__.py  monitor_case_base.py  tc0001_basic_resync.py  tc0002_sync_list_validation.py  tc0003_dry_run_validation.py  tc0004_single_directory_sync.py  tc0005_force_sync_override.py  tc0006_download_only.py  tc0007_download_only_cleanup_local_files.py  tc0008_upload_only.py  tc0009_upload_only_no_remote_delete.py  tc0010_upload_only_remove_source_files.py  tc0011_skip_file_validation.py  tc0012_skip_dir_validation.py  tc0013_skip_dotfiles_validation.py  tc0014_skip_size_validation.py  tc0015_skip_symlinks_validation.py  tc0016_check_nosync_validation.py  tc0017_check_nomount_validation.py  tc0018_recycle_bin_validation.py  tc0019_logging_and_running_config.py  tc0020_monitor_mode_validation.py  tc0021_resumable_transfers_validation.py  tc0022_local_first_validation.py  tc0023_bypass_data_preservation_validation.py  tc0024_big_delete_safeguard_validation.py  tc0025_invalid_character_filename_validation.py  tc0026_reserved_device_name_validation.py  tc0027_whitespace_trailing_dot_validation.py  tc0028_control_character_non_utf8_filename_validation.py  tc0029_local_first_upload_only_timestamp_preservation_validation.py  tc0030_local_rename_propagation_validation.py  tc0031_local_directory_rename_propagation_validation.py  tc0032_remote_rename_reconciliation.py  tc0033_remote_directory_rename_reconciliation-original.py  tc0033_remote_directory_rename_reconciliation.py  tc0034_local_move_between_directories_validation.py  tc0035_remote_move_between_directories_reconciliation.py  (+32 more)
completions/: complete.bash  complete.zsh  meson.build
contrib/completions/: complete.bash  complete.fish  complete.zsh
contrib/docker/: Dockerfile  Dockerfile-aarch64  Dockerfile-alpine  Dockerfile-debian  Dockerfile-rpi  Dockerfile-stretch  Dockerfile.alpine  Dockerfile.debian  Dockerfile.fedora  entrypoint.sh
contrib/gentoo/: onedrive-2.0.2.ebuild  onedrive-2.1.3.ebuild  onedrive-2.3.0.ebuild
contrib/init.d/: onedrive.init  onedrive_service.sh
contrib/pacman/: PKGBUILD.in
contrib/spec/: onedrive.spec.in
contrib/systemd/: onedrive.service.in  onedrive@.service.in
contrib/translations/: DE.json  EN-US.json  ES.json  example.json
docker/: Dockerfile  README.md  entrypoint.sh
docs/: BUILD.md  BusinessSharedFolders.md  Docker.md  INSTALL.md  Office365.md  Podman.md  README.BusinessSharedFolders.md  SharePoint-Shared-Libraries.md  USAGE.md  advanced-usage.md  application-config-options.md  application-security.md  build-rpm-howto.md  business-shared-folders.md  business-shared-items.md  client-architecture.md  contributing.md  docker.md  end_to_end_testing.md  install.md  known-issues.md  national-cloud-deployments.md  podman.md  privacy-policy.md  server-side-filtering-limitations.md  sharepoint-libraries.md  terms-of-service.md  ubuntu-package-install.md  usage.md  webhooks.md
docs/puml/: applyPotentiallyChangedItem.puml  applyPotentiallyNewLocalItem.puml  client_side_filtering_processing_order.puml  client_side_filtering_rules.puml  client_use_of_libcurl.puml  code_functional_component_relationships.puml  conflict_handling_default.puml  conflict_handling_default_resync.puml  conflict_handling_local-first_default.puml  conflict_handling_local-first_resync.puml  database_schema.puml  default_sync_flow.puml  downloadFile.puml  high_level_operational_process.puml  is_item_in_sync.puml  local_first_sync_process.puml  main_activity_flows.puml  onedrive_linux_authentication.puml  onedrive_windows_ad_authentication.puml  onedrive_windows_authentication.puml  uploadFile.puml  uploadModifiedFile.puml  webhooks.puml
hooks/: build  post_push
init.d/: onedrive.init  onedrive_service.sh
lib/: sqlite3.lib
logrotate/: onedrive.logrotate
pacman/: PKGBUILD  PKGBUILD.in
patch/: etc_c_curl.d  std_net_curl.d
snap/: snapcraft.yaml
spec/: onedrive.spec  onedrive.spec.in
src/: README  cache.d  clientSideFiltering.d  config.d  curlEngine.d  curlWebsockets.d  intune.d  itemdb.d  localAuth.d  log.d  main.d  meson.build  meson_options.txt  monitor.d  onedrive.d  progress.d  qxor.d  selective.d  socketio.d  sqlite.d  sync.d  translations.d  upload.d  util.d  webhook.d  xattr.d
src/arsd/: README  README.md  cgi.d
src/c/fuse/: README  common.d  fuse.d
src/docopt/: LICENSE-MIT  argvalue.d  docopt.d  patterns.d  tokens.d  unittests.d
src/fused/: LICENSE  README  fuse.d
src/notifications/: README  dnotify.d  notify.d
systemd.units/: meson.build  onedrive.service.in  onedrive@.service.in
test/: 00-reset.sh  01-create.sh  01-sync.sh  02-delete.sh  03-rename.sh
tests/: bad-file-name.tar.xz  makefiles.sh
(+12 files in other folders)
